InfrastructureAsCode/InfrastructureAsCode/cdk.out/NetworkStack-dev.template.json
{
 "Resources": {
  "ProductManagementVpc10564D87": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "NetworkStack-dev/ProductManagementVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-dev/ProductManagementVpc/Resource"
   }
  },
  "ProductManagementVpcPublicSubnet1Subnet81E1FB93": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-dev/ProductManagementVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ProductManagementVpc10564D87"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-dev/ProductManagementVpc/PublicSubnet1/Subnet"
   }
  },
  "ProductManagementVpcPublicSubnet1RouteTableEB51BD7B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "NetworkStack-dev/ProductManagementVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ProductManagementVpc10564D87"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-dev/ProductManagementVpc/PublicSubnet1/RouteTable"
   }
  },
  "ProductManagementVpcPublicSubnet1RouteTableAssociation2C8B4E91": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ProductManagementVpcPublicSubnet1RouteTableEB51BD7B"
    },
    "SubnetId": {
     "Ref": "ProductManagementVpcPublicSubnet1Subnet81E1FB93"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-dev/ProductManagementVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "ProductManagementVpcPublicSubnet1DefaultRoute9832764D": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "ProductManagementVpcIGW529E5018"
    },
    "RouteTableId": {
     "Ref": "ProductManagementVpcPublicSubnet1RouteTableEB51BD7B"
    }
   },
   "DependsOn": [
    "ProductManagementVpcVPCGWBD9F6C9C"
   ],
   "Metadata": {
    "aws:cdk:path": "NetworkStack-dev/ProductManagementVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "ProductManagementVpcPublicSubnet1EIP6AF05476": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "NetworkStack-dev/ProductManagementVpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-dev/ProductManagementVpc/PublicSubnet1/EIP"
   }
  },
  "ProductManagementVpcPublicSubnet1NATGateway1D9DF538": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "ProductManagementVpcPublicSubnet1EIP6AF05476",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "ProductManagementVpcPublicSubnet1Subnet81E1FB93"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "NetworkStack-dev/ProductManagementVpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "ProductManagementVpcPublicSubnet1DefaultRoute9832764D",
    "ProductManagementVpcPublicSubnet1RouteTableAssociation2C8B4E91"
   ],
   "Metadata": {
    "aws:cdk:path": "NetworkStack-dev/ProductManagementVpc/PublicSubnet1/NATGateway"
   }
  },
  "ProductManagementVpcPublicSubnet2SubnetC29A34F8": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-dev/ProductManagementVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ProductManagementVpc10564D87"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-dev/ProductManagementVpc/PublicSubnet2/Subnet"
   }
  },
  "ProductManagementVpcPublicSubnet2RouteTable00D68075": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "NetworkStack-dev/ProductManagementVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ProductManagementVpc10564D87"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-dev/ProductManagementVpc/PublicSubnet2/RouteTable"
   }
  },
  "ProductManagementVpcPublicSubnet2RouteTableAssociationEA247F16": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ProductManagementVpcPublicSubnet2RouteTable00D68075"
    },
    "SubnetId": {
     "Ref": "ProductManagementVpcPublicSubnet2SubnetC29A34F8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-dev/ProductManagementVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "ProductManagementVpcPublicSubnet2DefaultRoute3754CB33": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "ProductManagementVpcIGW529E5018"
    },
    "RouteTableId": {
     "Ref": "ProductManagementVpcPublicSubnet2RouteTable00D68075"
    }
   },
   "DependsOn": [
    "ProductManagementVpcVPCGWBD9F6C9C"
   ],
   "Metadata": {
    "aws:cdk:path": "NetworkStack-dev/ProductManagementVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "ProductManagementVpcPrivateSubnet1SubnetA221E230": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2a",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-dev/ProductManagementVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ProductManagementVpc10564D87"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-dev/ProductManagementVpc/PrivateSubnet1/Subnet"
   }
  },
  "ProductManagementVpcPrivateSubnet1RouteTable2954D7E5": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "NetworkStack-dev/ProductManagementVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ProductManagementVpc10564D87"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-dev/ProductManagementVpc/PrivateSubnet1/RouteTable"
   }
  },
  "ProductManagementVpcPrivateSubnet1RouteTableAssociationE381A4FD": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ProductManagementVpcPrivateSubnet1RouteTable2954D7E5"
    },
    "SubnetId": {
     "Ref": "ProductManagementVpcPrivateSubnet1SubnetA221E230"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-dev/ProductManagementVpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "ProductManagementVpcPrivateSubnet1DefaultRoute3B6879B5": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "ProductManagementVpcPublicSubnet1NATGateway1D9DF538"
    },
    "RouteTableId": {
     "Ref": "ProductManagementVpcPrivateSubnet1RouteTable2954D7E5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-dev/ProductManagementVpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "ProductManagementVpcPrivateSubnet2Subnet8E3772F0": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2b",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-dev/ProductManagementVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ProductManagementVpc10564D87"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-dev/ProductManagementVpc/PrivateSubnet2/Subnet"
   }
  },
  "ProductManagementVpcPrivateSubnet2RouteTable1B4FB37F": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "NetworkStack-dev/ProductManagementVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ProductManagementVpc10564D87"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-dev/ProductManagementVpc/PrivateSubnet2/RouteTable"
   }
  },
  "ProductManagementVpcPrivateSubnet2RouteTableAssociation8EC51902": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ProductManagementVpcPrivateSubnet2RouteTable1B4FB37F"
    },
    "SubnetId": {
     "Ref": "ProductManagementVpcPrivateSubnet2Subnet8E3772F0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-dev/ProductManagementVpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "ProductManagementVpcPrivateSubnet2DefaultRouteC807A4F4": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "ProductManagementVpcPublicSubnet1NATGateway1D9DF538"
    },
    "RouteTableId": {
     "Ref": "ProductManagementVpcPrivateSubnet2RouteTable1B4FB37F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-dev/ProductManagementVpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "ProductManagementVpcIGW529E5018": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "NetworkStack-dev/ProductManagementVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-dev/ProductManagementVpc/IGW"
   }
  },
  "ProductManagementVpcVPCGWBD9F6C9C": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "ProductManagementVpcIGW529E5018"
    },
    "VpcId": {
     "Ref": "ProductManagementVpc10564D87"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-dev/ProductManagementVpc/VPCGW"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/0WOzQ6CMBCEn8V7WQRN9OKBIDFeCAHC1ZS6xgq2pN1qjPHdLfGH7GFmv51sJoZovYRoxu82EMcu6GULz4q46JhHBxQxPJtBsPSkmiJlhWt7KSrXKqSRTa7UjrDmbY8Tn1hirRaSk9TqHx5Nti9GyTntOOGdP1hh5M3b6fFeERrvf4FPk++WkK96vqKiFyvRamcEvthWU44UrmEOqxDyrE61wWQYggaN9RU2twVEYeTPfmYXK2VgnCJ5RSg/+gbjMHVOFwEAAA=="
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-dev/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "ExportsOutputRefProductManagementVpcPublicSubnet1Subnet81E1FB938D5336BF": {
   "Value": {
    "Ref": "ProductManagementVpcPublicSubnet1Subnet81E1FB93"
   },
   "Export": {
    "Name": "NetworkStack-dev:ExportsOutputRefProductManagementVpcPublicSubnet1Subnet81E1FB938D5336BF"
   }
  },
  "ExportsOutputRefProductManagementVpcPublicSubnet2SubnetC29A34F8C2D30391": {
   "Value": {
    "Ref": "ProductManagementVpcPublicSubnet2SubnetC29A34F8"
   },
   "Export": {
    "Name": "NetworkStack-dev:ExportsOutputRefProductManagementVpcPublicSubnet2SubnetC29A34F8C2D30391"
   }
  },
  "ExportsOutputRefProductManagementVpc10564D87BE3B0F48": {
   "Value": {
    "Ref": "ProductManagementVpc10564D87"
   },
   "Export": {
    "Name": "NetworkStack-dev:ExportsOutputRefProductManagementVpc10564D87BE3B0F48"
   }
  },
  "ExportsOutputRefProductManagementVpcPrivateSubnet1SubnetA221E230B5A8DC4E": {
   "Value": {
    "Ref": "ProductManagementVpcPrivateSubnet1SubnetA221E230"
   },
   "Export": {
    "Name": "NetworkStack-dev:ExportsOutputRefProductManagementVpcPrivateSubnet1SubnetA221E230B5A8DC4E"
   }
  },
  "ExportsOutputRefProductManagementVpcPrivateSubnet2Subnet8E3772F05A985E9A": {
   "Value": {
    "Ref": "ProductManagementVpcPrivateSubnet2Subnet8E3772F0"
   },
   "Export": {
    "Name": "NetworkStack-dev:ExportsOutputRefProductManagementVpcPrivateSubnet2Subnet8E3772F05A985E9A"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
